--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "NOVAPRIME",
-    "short_name": "NOVAPRIME",
+    "name": "GLOBAL TRADES",
+    "short_name": "GLOBAL TRADES",
     "theme_color": "#14b8a6",
     "description": "Advanced trading platform - Professional-grade automated trading tools.",
     "background_color": "#0f1419",
